# article_project

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  clear_core_dump.sh  start.sh  tmp.txt
_Ray_Tracer/: CMakeLists.txt
_Ray_Tracer/inc/: CTRL_Parallel_CPU.h  CTRL_STATS_work_group.h  CTRL_Scene_Controller.h  CTRL_Scene_details.h  CTRL_Scene_exe_details.h  CTRL_Setuper.h  CTRL_Timer.h  RT_Distance_contest_spheres.h  RT_Light_calculations.h  RT_Object.h  RT_RGB.h  RT_RGB_float_sum_and_avg.h  RT_Renderer.h  _MAIN_.h  _PARSER_Format_Buffer_Common_.h  _constants_.h  _global_variables_.h  _preprocessor_.h  _type_definitions_.h
_Ray_Tracer/scripts/: production.sh
_Ray_Tracer/src/: CTRL_Scene.cpp  CTRL_Scene_Controller.cpp  CTRL_Setuper.cpp  CTRL_Timer.cpp  RT_Renderer.cpp
_Ray_Tracer/src/CUDA/: CTRL_Bmp.cu  CTRL_Scene_Controller.cu  RT_Renderer.cu  _main_.cu
_inc/: __preprocessor__.h  engine.h  openMP_test.h  sim.h  visualizer.h
_inc/base/: __preprocessor__.h  __time_stamp__.h
_run_time_config_/: estimated_finish_date.txt
_src/: main.cu
scripts/: formating_hook.sh  production.sh  run.sh
